--- a/docs/day-05.Rmd
+++ b/docs/day-05.Rmd
@@ -52,6 +52,10 @@ Use `dplyr` verbs to tell create a data.frame of the **5** counties with the mos
 (**Hint:** `filter`, `arrange`)
 
 ```{r}
+covid %>%
+  filter(date == max(date)) %>%
+  arrange(-cases) %>% 
+  head(5)
 
 ```
 
@@ -62,7 +66,12 @@ Use `dplyr` verbs to tell create a data.frame of the **5** states with the _most
 (**Hint:** `filter`, `group_by`, `summarize`, `arrange`)
 
 ```{r}
-
+covid %>%
+  filter(date == max(date)) %>%
+  group_by(state) %>% 
+  summarize(cases = sum(cases)) %>% 
+  arrange(-cases) %>% 
+  head(5)
 ```
 
 ## Question 3: 
@@ -72,6 +81,11 @@ Use the `dplyr` verbs to report the  **5** counties with the _worst_ current dea
 (**Hint:** `filter`, `mutate`, `arrange`, `slice`)
 
 ```{r}
+covid %>% 
+  filter(date == max(date)) %>%
+  mutate(death_cases_ratio = 100* (deaths/cases)) %>% 
+  arrange(-death_cases_ratio) %>% 
+  head(7)
 
 ```
 
@@ -83,6 +97,14 @@ USe the `dplyr` verbs to report the **5** states with the worst current deaths/c
 (**Hint:** `filter`, `group_by`, `summarize`, `mutate`, `arrange`)
 
 ```{r}
+covid %>% 
+  filter(date == max(date)) %>%
+  group_by(state) %>% 
+  mutate(death_cases_ratio = 100* (deaths/cases)) %>% 
+  summarize(death_cases_ratio = sum(death_cases_ratio)) %>% 
+  arrange(-death_cases_ratio) %>% 
+  head(7)
+  
 
 ```
 
